--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,13 @@ click==8.1.7
 cryptography==42.0.8
 Flask==3.0.3
 Flask-Session==0.8.0
+gunicorn==22.0.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 msgspec==0.18.6
+packaging==24.1
 pycparser==2.22
 PyJWT==2.8.0
 requests==2.32.3
