--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cachelib==0.13.0
 certifi==2024.6.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+circuitbreaker==1.4.0
 click==8.1.7
 cryptography==42.0.8
 Flask==3.0.3
@@ -14,9 +15,14 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 msgspec==0.18.6
+oci==2.128.2
 packaging==24.1
 pycparser==2.22
 PyJWT==2.8.0
+pyOpenSSL==24.1.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
 requests==2.32.3
+six==1.16.0
 urllib3==2.2.1
 Werkzeug==3.0.3
