Rotating File Logger Implementation

--- a/example.ini
+++ b/example.ini
@@ -2,13 +2,13 @@
 URI = http://example.com:80
 TagNamespace = Prod
 TagKey = Creator
-#FilterNamespace = Project
+# FilterNamespace = Project                                         # Optional
 FilterKey = Expires
 
 [AUTH]
 AuthType = Profile
-#ConfigFile = ~/home/oci-config
-#Profile = JARBUCKLE
+# ConfigFile = ~/home/oci-config                                    # Optional
+# Profile = JARBUCKLE                                               # Optional
 
 [IDM]
 # Reccomendation is to prefer environment variables or remote secrets over storing
@@ -18,7 +18,6 @@ ClientId = abcd
 ClientSecret = efgh
 
 [LOGGING]
-# Options [debug, info, warning, error]
-LogLevel = debug
-LogFile = ~/access.log
-ErrorLogFile = ~/error.log
+LogLevel = info                                                     # Options [debug, info, warning, error, critical]
+# LogFile = /var/log/dashboard/access.log                           # Optional -- Absolute path required
+# LogFormat = %(asctime)s - %(name)s - %(levelname)s - %(message)s  # Optional
